--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
-    "editor.fontFamily": "JetBrains Mono",
     "editor.fontSize": 14,
     "editor.fontLigatures": true,
-    "workbench.colorTheme": "Community Material Theme Ocean",
+    "workbench.colorTheme": "Visual Studio Light",
     "cSpell.words": [
         "middlewares"
     ],
+    "workbench.iconTheme": "eq-material-theme-icons",
 }
