--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "publishConfig": {
     "access": "public"
   },
-
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
@@ -24,7 +23,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "react": "^16.10.2",
-    "react-bootstrap": "^1.0.0-beta.14",
+    "react-bootstrap": "1.0.0",
     "react-dom": "^16.10.2",
     "react-fontawesome": "^1.6.1",
     "react-loader-spinner": "^3.1.5",
