--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "bootstrap": "^4.3.1",
     "react": "^16.10.2",
     "react-bootstrap": "1.0.0",
+    "react-bootstrap-dialog": "^0.13.0",
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.10.2",
     "react-fontawesome": "^1.6.1",
-    "react-loader-spinner": "^3.1.5",
     "react-promise-tracker": "^2.0.5",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
@@ -59,5 +59,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "redux-mock-store": "^1.5.4"
   }
 }
