--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "typesafe-actions": "^5.1.0",
-    "typescript": "3.6.4"
+    "typescript": "^3.8"
   },
   "scripts": {
     "start": "react-scripts start",
