change the default service name

--- a/nginx.conf
+++ b/nginx.conf
@@ -16,38 +16,34 @@
 
 
 
-       log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+         log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                        '$status $body_bytes_sent "$http_referer" '
+                        '"$http_user_agent" "$http_x_forwarded_for"';
 
-       sendfile            on;
-       tcp_nopush          on;
-       tcp_nodelay         on;
-       keepalive_timeout   65;
-       types_hash_max_size 2048;
 
-      include             /etc/nginx/mime.types;
-      default_type        application/octet-stream;
+        include             /etc/nginx/mime.types;
+        default_type        application/octet-stream;
 
-	
-  
+
+
 
         server {
             listen       8080 default_server;
             listen       [::]:8080 default_server;
             server_name  _;
 
-     root         /opt/app-root/src;
-     index        index.html;
+             root         /opt/app-root/src;
+             index        index.html;
 
             # enable rewrite for react router
             location / {
                 try_files $uri  /index.html;
             }
 
-            location /api {  
+            location /api {
                 #rewrite /api/(.*) /$1  break;
-                proxy_pass http://camel-rest-sql:8080/services/app/expenses;
+                # resolver 172.30.0.10 valid=3s;
+                proxy_pass http://nfuse:8080/services/app/expenses;
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                 proxy_set_header X-NginX-Proxy true;
@@ -56,6 +52,6 @@
                 proxy_cache_bypass $http_upgrade;
                 proxy_redirect off;
             }
- 
+
         }
     }
