--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
+    "@react-keycloak/web": "^2.1.3",
     "@types/jest": "24.0.19",
     "@types/node": "12.11.1",
     "@types/react": "16.9.9",
@@ -22,6 +23,7 @@
     "@types/react-router-dom": "^5.1.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "keycloak-js": "^11.0.0",
     "react": "^16.10.2",
     "react-bootstrap": "1.0.0",
     "react-datepicker": "^2.14.1",
