--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@types/react-router-dom": "^5.1.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
-    "keycloak-js": "^11.0.0",
+    "keycloak-js": "10.0.2",
     "react": "^16.10.2",
     "react-bootstrap": "1.0.0",
     "react-datepicker": "^2.14.1",
