--- a/.env.development
+++ b/.env.development
@@ -4,3 +4,5 @@ REACT_APP_KEYCLOAK_URL="http://localhost:7080/auth"
 REACT_APP_KEYCLOAK_REALM="geektour"
 REACT_APP_KEYCLOAK_CLIENT_ID="app-angular2"
 REACT_APP_KEYCLOAK_REDIRECT_URL="http://localhost:3000/callback";
+
+NODE_ENV=development
