--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "typesafe-actions": "^5.1.0",
-    "typescript": "^3.9"
+    "typescript": "^3.9",
+    "typestyle": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
