--- a/tekton/image-resource.yaml
+++ b/tekton/image-resource.yaml
@@ -6,4 +6,4 @@ spec:
   type: image
   params:
     - name: url
-      value: image-registry.openshift-image-registry.svc:5000/pipeline-demo/gui:latest
+      value: image-registry.openshift-image-registry.svc:5000/nm-demo/gui:latest
