changes with pipline

--- a/tekton/git-resource.yaml
+++ b/tekton/git-resource.yaml
@@ -6,6 +6,6 @@ spec:
   type: git
   params:
     - name: revision
-      value: master
+      value: keycloak
     - name: url
       value: https://github.com/nmajorov/expenses-web-ui.git
