change deploy-task.yaml to add node version

--- a/tekton/pipeline.yaml
+++ b/tekton/pipeline.yaml
@@ -26,6 +26,9 @@ spec:
   - name: build-and-deploy
     taskRef:
       name: deploy-nodejs-app
+    params:
+      - name: VERSION
+        value: "10"
     runAfter:
       - test
     resources:
