--- a/tekton/deploy-task.yaml
+++ b/tekton/deploy-task.yaml
@@ -7,9 +7,13 @@ spec:
     resources:
       - name: source
         type: git
-
+    params:
+      - name: VERSION
+        description: The version of the nodejs
+        default: '10'
+        type: string
   steps:
-    - name: test-app
+    - name: yarn-build-app
       image: 'registry.access.redhat.com/rhscl/nodejs-$(inputs.params.VERSION)-rhel7'
       workingDir: /workspace/source
       command: ["/bin/bash", "-c"]
@@ -26,41 +30,40 @@ spec:
 
           # use default service name for the fuse backend
           BACKEND_URL="http://nfuse:8080/services/app/expenses"
-
           echo "backEndUrl=$BACKEND_URL"
-
           # set backend url with redirects
-
           # set react url just to api - nginx will handle the rest
           sed -ri  "s|=(.*)|= \"/api\";|g" src/utils/backendUrl.ts
-
           # set nginx proxy pass url
           sed -ri  "s|proxy_pass.*|proxy_pass $BACKEND_URL;|g" ./nginx.conf
-
           echo "build for prod"
+          yarn install
           yarn build
-
           #copy web server config
           cp -r ./nginx.conf   ./build
 
 
-
-      - name: deploy-app
-        image: quay.io/openshift/origin-cli:latest
-        workingDir: /workspace/source
-        command: ["/bin/bash", "-c"]
-        volumeMounts:
-          - name: gen-source
-            mountPath: /gen-source
-        args:
-          - |-
-            oc new-app nodejs-gui
-            oc new-build --image-stream=nginx  --binary=true --name=nodejs-gui
-            oc start-build nodejs-gui --from-dir=. --follow
-            oc new-app nodejs-gui
-            oc expose svc nodejs-gui
-       # securityContext:
-       #   privileged: true
+    - name: deploy-app
+      image: quay.io/openshift/origin-cli:latest
+      workingDir: /workspace/source
+      command: ["/bin/bash", "-c"]
+      volumeMounts:
+        - name: gen-source
+          mountPath: /gen-source
+      args:
+        - |-
+          echo "delete if  deployment exist"
+          oc delete  deployment.app/nodejs-gui
+          oc delete  service nodejs-gui
+          cd build
+          echo "start deployment from directory"
+          pwd
+          oc new-app nodejs-gui
+          oc new-build --image-stream=nginx  --binary=true --name=nodejs-gui
+          oc start-build nodejs-gui --from-dir=. --follow
+          oc expose svc nodejs-gui
+     # securityContext:
+     #   privileged: true
   volumes:
     - name: gen-source
       emptyDir: {}
