fix data fetching

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "typestyle": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "BROWSER=none react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false",
     "eject": "react-scripts eject",
