--- a/tekton/tasks/test-nodejs-app-task.yaml
+++ b/tekton/tasks/test-nodejs-app-task.yaml
@@ -3,26 +3,11 @@ kind: Task
 metadata:
   name: test-nodejs-app
 spec:
-  inputs:
-    resources:
-      - name: input-ui-source
-        type: git
-    params:
-      - name: VERSION
-        description: The version of the nodejs
-        default: '8'
-        type: string
-      - name: PATH_CONTEXT
-        description: The location of the path to run  from.
-        default: .
-        type: string
-      - name: TLSVERIFY
-        description: Verify the TLS on the registry endpoint (for push/pull to a non-TLS registry)
-        default: "true"
-        type: string
-
-
-
+  params:
+    - name: VERSION
+      description: The version of the nodejs
+      default: '10'
+      type: string
   steps:
       - name: test-app
         image: 'registry.access.redhat.com/rhscl/nodejs-$(inputs.params.VERSION)-rhel7'
@@ -42,3 +27,6 @@ spec:
             yarn install
             echo "run tests"
             yarn test
+  workspaces:
+    - name: input
+      mountPath: /workspace/input-ui-source
