--- a/tekton/tasks/deploy-task.yaml
+++ b/tekton/tasks/deploy-task.yaml
@@ -3,23 +3,20 @@ kind: Task
 metadata:
   name: deploy-nodejs-app
 spec:
-  inputs:
-    resources:
-      - name: input-ui-source
-        type: git
-    params:
-      - name: VERSION
-        description: The version of the nodejs
-        default: '10'
-        type: string
+  params:
+    - name: VERSION
+      description: The version of the nodejs
+      default: '10'
+      type: string
   steps:
     - name: yarn-build-app
-      image: 'registry.access.redhat.com/rhscl/nodejs-$(inputs.params.VERSION)-rhel7'
+      image: 'registry.access.redhat.com/rhscl/nodejs-$(params.VERSION)-rhel7'
       workingDir: /workspace/input-ui-source
       command: ["/bin/bash", "-c"]
 
       args:
         - |-
+          echo "current git branch: $(git rev-parse --abbrev-ref HEAD)"
           echo "install yarn"
           npm install -g yarn
           yarn install
@@ -44,16 +41,23 @@ spec:
 
       args:
         - |-
+
           cd build
           ls -lisa
-          echo "delete previous deployments if exist"
-          oc delete  all --selector=app=nodejs-gui --ignore-not-found
 
-          oc new-app --name=nodejs-gui --image-stream=openshift/nginx:1.16 --binary=true
-          oc start-build nodejs-gui --from-dir .
-          oc expose svc nodejs-gui
+          oc get bc/nodejs-gui
+          if [[ $? -ne 0 ]]
+              then
+          	        oc new-app --name=nodejs-gui --image-stream=openshift/nginx:1.16 --binary=true
+                    oc start-build nodejs-gui --from-dir .
+                    oc expose svc nodejs-gui
+
+              else
+                  echo "Application already exists."
+          	      oc start-build nodejs-gui --from-dir=. --follow
+          fi
 
 
-
-
-
+  workspaces:
+   - name: input
+     mountPath: /workspace/input-ui-source
