add initial report support

--- a/.env.development
+++ b/.env.development
@@ -4,6 +4,6 @@ REACT_APP_KEYCLOAK_URL="http://localhost:7080/auth"
 REACT_APP_KEYCLOAK_REALM="basic"
 REACT_APP_KEYCLOAK_CLIENT_ID="app-react"
 #REACT_APP_KEYCLOAK_REDIRECT_URL="http://localhost:3000/callback";
-REACT_APP_BACKEND_URL="http://localhost:8080/expenses"
+REACT_APP_BACKEND_URL="http://localhost:8080"
 
 NODE_ENV=development
