add prettier to linter

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-# SKIP_PREFLIGHT_CHECK=true
+SKIP_PREFLIGHT_CHECK=true
 
 REACT_APP_KEYCLOAK_URL="http://localhost:7080/auth"
 REACT_APP_KEYCLOAK_REALM="basic"
