--- a/package.json
+++ b/package.json
@@ -1,80 +1,80 @@
 {
-  "name": "niko_react_ts_name",
-  "version": "0.1.0",
-  "private": true,
-  "license": "Apache-2.0",
-  "author": "Nikolaj  Majorov",
-  "main": "index.js",
-  "publishConfig": {
-    "access": "public"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-brands-svg-icons": "^5.11.2",
-    "@fortawesome/free-regular-svg-icons": "^5.11.2",
-    "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@fortawesome/react-fontawesome": "^0.1.7",
-    "@types/jest": "24.0.19",
-    "@types/node": "12.11.1",
-    "@types/react": "16.9.9",
-    "@types/react-dom": "16.9.2",
-    "@types/react-router": "^5.1.2",
-    "@types/react-router-dom": "^5.1.0",
-    "axios": "^0.19.0",
-    "bootstrap": "^4.3.1",
-    "connected-react-router": "^6.8.0",
-    "keycloak-js": "10.0.2",
-    "node-forge": "^0.10.0",
-    "react": "^16.10.2",
-    "react-bootstrap": "1.0.0",
-    "react-datepicker": "^2.14.1",
-    "react-dom": "^16.10.2",
-    "react-fontawesome": "^1.6.1",
-    "react-promise-tracker": "^2.0.5",
-    "react-redux": "^7.2.0",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
-    "redux": "^4.0.5",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0",
-    "typesafe-actions": "^5.1.0",
-    "typescript": "^3.9",
-    "typestyle": "^2.1.0"
-  },
-  "scripts": {
-    "start": "BROWSER=none react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --watchAll=false",
-    "eject": "react-scripts eject",
-    "test-dev": "react-scripts test"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
-    "eslint": "^7.11.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-standard": "^4.0.1",
-    "prettier": "2.1.2",
-    "redux-mock-store": "^1.5.4"
-  }
+    "name": "niko_react_ts_name",
+    "version": "0.1.0",
+    "private": true,
+    "license": "Apache-2.0",
+    "author": "Nikolaj  Majorov",
+    "main": "index.js",
+    "publishConfig": {
+        "access": "public"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.25",
+        "@fortawesome/free-brands-svg-icons": "^5.11.2",
+        "@fortawesome/free-regular-svg-icons": "^5.11.2",
+        "@fortawesome/free-solid-svg-icons": "^5.11.2",
+        "@fortawesome/react-fontawesome": "^0.1.7",
+        "@types/jest": "24.0.19",
+        "@types/node": "12.11.1",
+        "@types/react": "16.9.9",
+        "@types/react-dom": "16.9.2",
+        "@types/react-router": "^5.1.2",
+        "@types/react-router-dom": "^5.1.0",
+        "axios": "^0.19.0",
+        "bootstrap": "^4.3.1",
+        "connected-react-router": "^6.8.0",
+        "keycloak-js": "10.0.2",
+        "node-forge": "^0.10.0",
+        "react": "^16.10.2",
+        "react-bootstrap": "1.0.0",
+        "react-datepicker": "^2.14.1",
+        "react-dom": "^16.10.2",
+        "react-fontawesome": "^1.6.1",
+        "react-promise-tracker": "^2.0.5",
+        "react-redux": "^7.2.1",
+        "react-router": "^5.1.2",
+        "react-router-dom": "^5.1.2",
+        "react-scripts": "^3.4.3",
+        "redux": "^4.0.5",
+        "redux-persist": "^6.0.0",
+        "redux-thunk": "^2.3.0",
+        "typesafe-actions": "^5.1.0",
+        "typescript": "^3.9",
+        "typestyle": "^2.1.0"
+    },
+    "scripts": {
+        "start": "BROWSER=none react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --watchAll=false",
+        "eject": "react-scripts eject",
+        "test-dev": "react-scripts test",
+        "lint": "eslint 'src/**'"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^4.5.0",
+        "@typescript-eslint/parser": "^4.5.0",
+        "eslint": "^7.11.0",
+        "eslint-config-prettier": "^6.13.0",
+        "eslint-config-standard": "^14.1.1",
+        "eslint-config-standard-react": "^9.2.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^4.2.1",
+        "eslint-plugin-react": "^7.21.5",
+        "eslint-plugin-standard": "^4.0.1",
+        "prettier": "2.1.2",
+        "redux-mock-store": "^1.5.4"
+    }
 }
