change backend url for openshift deployment

--- a/.env.production
+++ b/.env.production
@@ -5,4 +5,5 @@ REACT_APP_KEYCLOAK_URL="http://sso-test-nm-demo.apps.ocp-cluster-1.rhlab.ch/auth
 REACT_APP_KEYCLOAK_REALM="basic"
 REACT_APP_KEYCLOAK_CLIENT_ID="app-react"
 
-#REACT_APP_BACKEND_URL="http://nfuse:8080/services/app/expenses"
+# for prod /api is default url 
+#REACT_APP_BACKEND_URL="/api"
