--- a/nginx.conf
+++ b/nginx.conf
@@ -43,7 +43,7 @@
             location /api {
                 #rewrite /api/(.*) /$1  break;
                 # resolver 172.30.0.10 valid=3s;
-                proxy_pass http://nfuse:8080/services/app/expenses;
+                proxy_pass http://expenses-backend-quarkus:8080;
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                 proxy_set_header X-NginX-Proxy true;
