changes for enviroment variable

--- a/.env.production
+++ b/.env.production
@@ -1,9 +1,6 @@
+SKIP_PREFLIGHT_CHECK=true
 
-# SKIP_PREFLIGHT_CHECK=true
-
-REACT_APP_KEYCLOAK_URL="http://sso-test-nm-demo.apps.ocp-cluster-1.rhlab.ch/auth/"
+REACT_APP_KEYCLOAK_URL="/auth"
 REACT_APP_KEYCLOAK_REALM="basic"
 REACT_APP_KEYCLOAK_CLIENT_ID="app-react"
 
-# for prod /api is default url 
-#REACT_APP_BACKEND_URL="/api"
