--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -11,10 +11,10 @@ server {
     root /usr/share/nginx/html;
 
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri /index.html;
     }
     location /api {
-        proxy_pass https://preview.pro.ant.design;
+        proxy_pass http://192.168.178.23:8080/;
         proxy_set_header   X-Forwarded-Proto $scheme;
         proxy_set_header   Host              $http_host;
         proxy_set_header   X-Real-IP         $remote_addr;
