--- a/nginx.conf
+++ b/nginx.conf
@@ -42,8 +42,21 @@
 
             location /api {
                 #rewrite /api/(.*) /$1  break;
-                # resolver 172.30.0.10 valid=3s;
+                resolver 172.30.0.10 valid=3s;
                 proxy_pass http://expenses-backend-quarkus:8080;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-NginX-Proxy true;
+                proxy_ssl_session_reuse off;
+                proxy_set_header Host $http_host;
+                proxy_cache_bypass $http_upgrade;
+                proxy_redirect off;
+            }
+
+	   
+            location /auth {
+                resolver 172.30.0.10 valid=3s;
+                proxy_pass http://sso-test:8080/auth;
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                 proxy_set_header X-NginX-Proxy true;
