--- a/tekton/tasks/deploy-task.yaml
+++ b/tekton/tasks/deploy-task.yaml
@@ -41,10 +41,15 @@ spec:
           echo "yarn version: $(yarn --version)"
 
           # echo define env for production
-          echo "REACT_APP_KEYCLOAK_URL=$(params.sso-url)" > .env.production
-          echo "REACT_APP_KEYCLOAK_REALM=$(params.sso-realm)" >> .env.production
-          echo "REACT_APP_KEYCLOAK_CLIENT_ID=$(params.sso-client-id)" >> .env.production
-          echo "SKIP_PREFLIGHT_CHECK=true" >> .env.production
+          export REACT_APP_KEYCLOAK_URL="$(params.sso-url)"
+          export REACT_APP_KEYCLOAK_REALM="$(params.sso-realm)"
+          export REACT_APP_KEYCLOAK_CLIENT_ID="$(params.sso-client-id)"
+
+          # replace them on the env prod file
+          
+          sed -ri  "s|REACT_APP_KEYCLOAK_URL=.*|REACT_APP_KEYCLOAK_URL=$REACT_APP_KEYCLOAK_URL|g" .env.production
+          sed -ri  "s|REACT_APP_KEYCLOAK_REALM=.*|REACT_APP_KEYCLOAK_URL=$REACT_APP_KEYCLOAK_REALM|g" .env.production
+          sed -ri  "s|REACT_APP_KEYCLOAK_CLIENT_ID=.*|REACT_APP_KEYCLOAK_CLIENT_ID=$REACT_APP_KEYCLOAK_CLIENT_ID|g" .env.production
 
           echo "read react environment"
           cat .env.production
