--- a/.env.production
+++ b/.env.production
@@ -3,3 +3,4 @@ SKIP_PREFLIGHT_CHECK=true
 REACT_APP_KEYCLOAK_URL="http://sso-test:8080/auth"
 REACT_APP_KEYCLOAK_REALM="basic"
 REACT_APP_KEYCLOAK_CLIENT_ID="app-react"
+REACT_APP_BACKEND_URL="/api"
