--- a/.rhone.yaml
+++ b/.rhone.yaml
@@ -5,7 +5,7 @@ contributors:
   name: Nikolaj Majorov
 interpreter-version: lts
 language: node_js
-name: expences-ui
+name: expenses-ui
 version: 0.1.0
 scripts:
   - preBuild: "yarn add create-react-app"
