--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "axios": "^0.19.0",
         "bootstrap": "^4.3.1",
         "connected-react-router": "^6.8.0",
+        "dotenv": "^8.2.0",
         "keycloak-js": "10.0.2",
         "node-forge": "^0.10.0",
         "react": "^16.10.2",
