add some docker tests

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen 80;
+    listen 8080;
     # gzip config
     gzip on;
     gzip_min_length 1k;
@@ -15,8 +15,10 @@ server {
     }
     location /api {
         proxy_pass http://192.168.178.23:8080/;
+        proxy_redirect off;
         proxy_set_header   X-Forwarded-Proto $scheme;
         proxy_set_header   Host              $http_host;
         proxy_set_header   X-Real-IP         $remote_addr;
+        add_header 'Origin' $http_host;
     }
 }
