--- a/tekton/pipelinerun-branch-master.yaml
+++ b/tekton/pipelinerun-branch-master.yaml
@@ -12,7 +12,7 @@ spec:
     - name: GIT_REVISION
       value: master
     - name: SSO_URL
-      value: 'https://secure-sso-test-nm-demo.apps.ocp-cluster-1.rhlab.ch/auth/'
+      value: 'http://sso-test-nm-demo.apps.ocp-cluster-1.rhlab.ch/auth'
     - name: BACKEND_URL
       value: 'http://expenses-backend-quarkus-nm-demo.apps.ocp-cluster-1.rhlab.ch'
   resources:
