--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "@fortawesome/free-brands-svg-icons": "^5.11.2",
         "@fortawesome/free-regular-svg-icons": "^5.11.2",
         "@fortawesome/free-solid-svg-icons": "^5.11.2",
-        "@fortawesome/react-fontawesome": "^0.1.7",
+        "@fortawesome/react-fontawesome": "^0.1.14",
         "@types/jest": "24.0.19",
         "@types/node": "12.11.1",
         "@types/react": "16.9.9",
@@ -22,17 +22,18 @@
         "@types/react-router-dom": "^5.1.0",
         "axios": "^0.21.1",
         "bootstrap": "^4.3.1",
-        "connected-react-router": "^6.8.0",
+        "connected-react-router": "^6.9.1",
         "dotenv": "^8.2.0",
+        "history": "^4.7.2",
         "keycloak-js": "10.0.2",
         "node-forge": "^0.10.0",
-        "react": "^16.10.2",
-        "react-bootstrap": "1.0.0",
-        "react-datepicker": "^2.14.1",
-        "react-dom": "^16.10.2",
+        "react": "^17.0.2",
+        "react-bootstrap": "1.6.0",
+        "react-datepicker": "^3.8.0",
+        "react-dom": "^17.0.2",
         "react-fontawesome": "^1.6.1",
         "react-promise-tracker": "^2.0.5",
-        "react-redux": "^7.2.1",
+        "react-redux": "^7.2.4",
         "react-router": "^5.1.2",
         "react-router-dom": "^5.1.2",
         "react-scripts": "^3.4.3",
