--- a/.env.development
+++ b/.env.development
@@ -2,6 +2,6 @@ SKIP_PREFLIGHT_CHECK=true
 
 REACT_APP_KEYCLOAK_URL="http://localhost:7080/auth"
 REACT_APP_KEYCLOAK_REALM="basic"
-REACT_APP_KEYCLOAK_CLIENT_ID="app-react"
+REACT_APP_KEYCLOAK_CLIENT_ID="basicclient"
 REACT_APP_BACKEND_URL="http://localhost:8080"
 
