--- a/tekton/tasks/webapp-build-runtime-task.yaml
+++ b/tekton/tasks/webapp-build-runtime-task.yaml
@@ -19,7 +19,7 @@ spec:
       default: "false"
   resources:
     outputs:
-      - name: image
+      - name: ui-image
         type: image
 
 
@@ -30,7 +30,7 @@ spec:
     script: |
       #!/usr/bin/env bash
       echo "current dir : $(pwd)"
-      echo
+      echo "output ui-image: $(outputs.resources.ui-image.url)"
       echo "list directory:"
       echo
       ls -lisa
@@ -52,7 +52,7 @@ spec:
   - name: build
     image: quay.io/buildah/stable
     workingdir: /gen-source
-    command: ['buildah', 'bud', '--tls-verify=$(inputs.params.TLSVERIFY)', '--layers', '-f', '/gen-source/Dockerfile.gen', '-t', '$(outputs.resources.image.url)', '.']
+    command: ['buildah', 'bud', '--tls-verify=$(inputs.params.TLSVERIFY)', '--layers', '-f', '/gen-source/Dockerfile.gen', '-t', '$(outputs.resources.ui-image.url)', '.']
     volumeMounts:
     - name: varlibcontainers
       mountPath: /var/lib/containers
@@ -63,7 +63,7 @@ spec:
 
   - name: push
     image: quay.io/buildah/stable
-    command: ['buildah', 'push', '--tls-verify=$(inputs.params.TLSVERIFY)', '$(outputs.resources.image.url)', 'docker://$(outputs.resources.image.url)']
+    command: ['buildah', 'push', '--tls-verify=$(inputs.params.TLSVERIFY)', '$(outputs.resources.ui-image.url)', 'docker://$(outputs.resources.ui-image.url)']
     volumeMounts:
     - name: varlibcontainers
       mountPath: /var/lib/containers
