--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "keycloak-js": "10.0.2",
         "merge-deep": "^3.0.3",
         "node-forge": "^0.10.0",
+        "postcss": "^7.0.36",
         "react": "^17.0.2",
         "react-bootstrap": "1.6.0",
         "react-datepicker": "^3.8.0",
