--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
         "typestyle": "^2.1.0"
     },
     "scripts": {
-        "start": "BROWSER=none react-scripts start",
-        "build": "react-scripts build",
+        "start": "BROWSER=none react-scripts --openssl-legacy-provider start",
+        "build": "react-scripts --openssl-legacy-provider  build ",
         "test": "react-scripts test --watchAll=false",
         "eject": "react-scripts eject",
         "test-dev": "react-scripts test",
