--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "connected-react-router": "^6.9.1",
         "dotenv": "^8.2.0",
         "history": "^4.7.2",
-        "keycloak-js": "10.0.2",
+        "keycloak-js": "^16.1.1",
         "merge-deep": "^3.0.3",
         "node-forge": "^0.10.0",
         "postcss": "^7.0.36",
