--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     },
     "scripts": {
         "start": "BROWSER=none react-scripts --openssl-legacy-provider start",
-        "build": "react-scripts --openssl-legacy-provider  build ",
+        "build": "NODE_OPTIONS='--openssl-legacy-provider' react-scripts  build ",
         "test": "react-scripts test --watchAll=false",
         "eject": "react-scripts eject",
         "test-dev": "react-scripts test",
