--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     },
     "scripts": {
         "start": "BROWSER=none react-scripts --openssl-legacy-provider start",
+        "build-old": "react-scripts  build ",
         "build": "NODE_OPTIONS='--openssl-legacy-provider' react-scripts  build ",
         "test": "react-scripts test --watchAll=false",
         "eject": "react-scripts eject",
