--- a/tekton/pipelinerun-react17-branch-rhlab.yaml
+++ b/tekton/pipelinerun-react17-branch-rhlab.yaml
@@ -12,7 +12,7 @@ spec:
     - name: GIT_REVISION
       value: "react17"
     - name: SSO_URL
-      value: 'https://secure-sso-test-nm-demo.apps.ocp001.rhlab.ch/auth'
+      value: 'http://sso-test-nm-demo.apps.ocp001.rhlab.ch/auth'
     - name: BACKEND_URL
       value: 'http://expenses-backend-quarkus-nm-demo.apps.ocp001.rhlab.ch'
   resources:
