--- a/tekton/tasks/webapp-build-runtime-task.yaml
+++ b/tekton/tasks/webapp-build-runtime-task.yaml
@@ -13,7 +13,7 @@ spec:
       description: The Web Runtime image to use,  defaults to registry.redhat.io/rhscl/nginx-116-rhel7:1.16
       # default: registry.redhat.io/rhscl/nginx-116-rhel7:1.16 # need a docker secret in project
       # use OpenShift internal
-      default: image-registry.openshift-image-registry.svc:5000/openshift/nginx:1.16
+      default: image-registry.openshift-image-registry.svc:5000/openshift/nginx:1.18-ubi7
     - name: TLSVERIFY
       description: Verify the TLS on the registry endpoint (for push/pull to a non-TLS registry)
       default: "false"
