--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "react-router": "^5.1.2",
         "react-router-dom": "^5.1.2",
         "react-scripts": "^3.0.1",
+        "react-toastify": "^9.0.8",
         "redux": "^4.0.5",
         "redux-persist": "^6.0.0",
         "redux-thunk": "^2.3.0",
