--- a/tekton/tasks/webapp-build-runtime-task.yaml
+++ b/tekton/tasks/webapp-build-runtime-task.yaml
@@ -17,6 +17,10 @@ spec:
     - name: TLSVERIFY
       description: Verify the TLS on the registry endpoint (for push/pull to a non-TLS registry)
       default: "false"
+    - name: STORAGE_DRIVER
+      description: Set buildah storage driver
+      type: string
+      default: vfs
   resources:
     outputs:
       - name: ui-image
@@ -47,35 +51,37 @@ spec:
     volumeMounts:
     - name: gen-source
       mountPath: /gen-source
-    securityContext:
-      privileged: true
+   
   - name: build
     image: quay.io/buildah/stable
     workingdir: /gen-source
-    command: ['buildah', 'bud', '--tls-verify=$(inputs.params.TLSVERIFY)', '--layers', '-f', '/gen-source/Dockerfile.gen', '-t', '$(outputs.resources.ui-image.url)', '.']
+    command: ['buildah','--storage-driver=$(inputs.params.STORAGE_DRIVER)',  'bud', ' --tls-verify=$(inputs.params.TLSVERIFY)', '--layers', '-f', '/gen-source/Dockerfile.gen', '-t', '$(outputs.resources.ui-image.url)', '.']
     volumeMounts:
     - name: varlibcontainers
       mountPath: /var/lib/containers
     - name: gen-source
       mountPath: /gen-source
-    securityContext:
-      privileged: true
+    - name: devfuse
+      mountPath: /dev/fuse
 
   - name: push
     image: quay.io/buildah/stable
-    command: ['buildah', 'push', '--tls-verify=$(inputs.params.TLSVERIFY)', '$(outputs.resources.ui-image.url)', 'docker://$(outputs.resources.ui-image.url)']
+    command: ['buildah','--storage-driver=$(inputs.params.STORAGE_DRIVER)', 'push', '--tls-verify=$(inputs.params.TLSVERIFY)', '$(outputs.resources.ui-image.url)', 'docker://$(outputs.resources.ui-image.url)']
     volumeMounts:
     - name: varlibcontainers
       mountPath: /var/lib/containers
-    securityContext:
-      privileged: true
+    - name: devfuse
+      mountPath: /dev/fuse
+   
 
   volumes:
     - name: varlibcontainers
       emptyDir: {}
     - name: gen-source
       emptyDir: {}
-
+    - name: devfuse
+      emptyDir: { }
+      
   workspaces:
     - name: input
       mountPath: /workspace/source
